tests/NormalTests/paczka1/fuzzy1/63238264.err
Error in line 3: P6HFlcy A159 83,0
Error in line 20: P6HFlcy A99 36,69
Error in line 8: P6HFlcy S730 47,1
Error in line 31: hVQH1 A159 269,11
Error in line 30: P6HFlcy A733 7,3
Error in line 29: A733 S730 100,0
